--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,10 +4,7 @@
 name: Node.js CI
 
 on:
-    push:
-        branches: master
-    pull_request:
-        branches: ['*', '!master']
+    [pull_request]
 
 jobs:
     build:
@@ -24,11 +21,7 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - name: testing install
-              run: npm ci
-            - name: testing start
-              run: npm start
-            - name: testing build
-              run: npm run build --if-present
-            - name: testing test
-              run: npm test --if-present
+            - run: npm ci
+            - run: npm start
+            - run: npm run build --if-present
+            - run: npm test --if-present
