--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
-    "cypress": "^4.8.0",
-    "eslint": "^7.2.0"
+    "cypress": "^4.8.0"
   }
 }
