--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^16.9.38",
         "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
+        "classnames": "^2.2.6",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.4",
         "prettier": "^2.0.5",
