--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "@types/classnames": "^2.2.10",
         "@types/jest": "^24.9.1",
         "@types/node": "^12.12.47",
-        "@types/react": "^16.9.38",
-        "@types/react-dom": "^16.9.8",
         "@types/react-router-dom": "^5.1.5",
         "classnames": "^2.2.6",
         "eslint-config-prettier": "^6.11.0",
@@ -45,6 +44,8 @@
         ]
     },
     "devDependencies": {
+        "@types/react": "^16.9.38",
+        "@types/react-dom": "^16.9.8",
         "@typescript-eslint/eslint-plugin": "^3.3.0",
         "@typescript-eslint/parser": "^3.3.0",
         "cypress": "^4.8.0",
