--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,7 +4,10 @@
 name: Node.js CI
 
 on:
-    [pull_request]
+    push:
+        branches: master
+    pull_request:
+        branches: ['*', '!master']
 
 jobs:
     build:
@@ -21,7 +24,9 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
-            - run: npm ci
-            - run: npm start
-            - run: npm run build --if-present
-            - run: npm test --if-present
+            - name: testing install
+              run: npm ci
+            - name: testing build
+              run: npm run build --if-present
+            - name: testing test
+              run: npm test --if-present
