--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "classnames": "^2.2.6",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "firebase": "^7.15.4",
         "prettier": "^2.0.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
