--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "prettier": "^2.0.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-google-login": "^5.1.20",
         "react-hook-form": "^5.7.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
