--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@typescript-eslint/eslint-plugin": "^3.3.0",
         "@typescript-eslint/parser": "^3.3.0",
         "cypress": "^4.8.0",
-        "eslint": "^6.6.0"
+        "eslint": "^6.6.0",
+        "eslint-plugin-react-hooks": "^4.0.5"
     }
 }
