--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "cypress:open": "cypress open"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -50,7 +51,7 @@
         "@types/react-dom": "^16.9.8",
         "@typescript-eslint/eslint-plugin": "^3.3.0",
         "@typescript-eslint/parser": "^3.3.0",
-        "cypress": "^4.8.0",
+        "cypress": "^4.9.0",
         "eslint": "^6.6.0"
     }
 }
